# RayTracerReborn

./: CMakeLists.txt  README.md  RayTracerReborn.sln
Camera-Test/: Camera-Test.vcxproj  test.cpp
Material-Test/: Material-Test.vcxproj  test.cpp
Matrix-Test/: Matrix-Test.vcxproj  test.cpp
Ray-Test/: Ray-Test.vcxproj  test.cpp
RayTracerReborn/: BulletSim.cpp  BulletSim.hpp  Camera.cpp  Camera.hpp  Canvas.cpp  ClockSim.cpp  ClockSim.hpp  Intersection.cpp  Intersection.hpp  Intersections.cpp  Intersections.hpp  Light.cpp  Material.cpp  Material.hpp  Matrix.cpp  Matrix.hpp  PPM.hpp  PPM.ppm  Point.h  Ray.cpp  Ray.hpp  RayTracerReborn.vcxproj  RayTracerReborn.vcxproj.filters  SceneSim.cpp  SceneSim.hpp  ShadowSim.cpp  ShadowSim.hpp  Sphere.cpp  Sphere.hpp  SphereManager.cpp  SphereManager.hpp  Tuple.cpp  Tuple.hpp  TupleManager.cpp  TupleManager.hpp  Utility.cpp  Utility.hpp  World.cpp  World.hpp  main.cpp
RayTracerReborn/img/: PPM.ppm
RayTracerReborn/src/: BulletSim.hpp  Camera.cpp  Camera.hpp  Canvas.cpp  Canvas.hpp  ClockSim.cpp  ClockSim.hpp  Intersection.cpp  Intersection.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Matrix.cpp  Matrix.hpp  MatrixUtil.cpp  MatrixUtil.hpp  PPM.cpp  PPM.hpp  Ray.cpp  Ray.hpp  SceneSim.cpp  SceneSim.hpp  ShadowSim.cpp  ShadowSim.hpp  Sphere.cpp  Sphere.hpp  SphereManager.hpp  Tuple.cpp  Tuple.hpp  TupleManager.cpp  TupleManager.hpp  Utility.cpp  Utility.hpp  World.cpp  World.hpp  main.cpp
Tuple-Test/: Tuple-Test.vcxproj  test.cpp
World-Test/: World-Test.vcxproj  test.cpp
